# RaderEcho

RaderEchoV3.0/: .gitignore  CMakeLists.txt  README.md
RaderEchoV3.0/app/: CMakeLists.txt  main.cpp
RaderEchoV3.0/config/: beam_codes.txt  simulation_config.txt
RaderEchoV3.0/core/: CMakeLists.txt
RaderEchoV3.0/core/include/: BeamCodeManager.h  ClutterGenerator.h  ClutterManager.h  GridManager.h  Logger.h  ParameterManager.h  RadarSimulator.h  SignalProcessor.h  TargetManager.h  Types.h
RaderEchoV3.0/core/src/: BeamCodeManager.cpp  ClutterGenerator.cpp  ClutterManager.cpp  GridManager.cpp  Logger.cpp  ParameterManager.cpp  RadarSimulator.cpp  SignalProcessor.cpp  TargetManager.cpp
